--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,19 @@
 name: build
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
-	build:
+  build:
 
-	runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-	steps:
-	- uses: actions/checkout@v1
-	- name: Set up Python
-		uses: actions/setup-python@v1
-	- name: Install dependencies
-		run: |
-		python -m pip install --upgrade pip
-		pip install platformio
-	- name: Run PlatformIO
-		run: platformio run
+    steps:
+    - uses: actions/checkout@v1
+    - name: Set up Python
+      uses: actions/setup-python@v1
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install platformio
+    - name: Run PlatformIO
+      run: platformio run
